# sora

./: .flake8  README.md  pyproject.toml
sora/: sora.py  utils.py
sora/cogs/: __init__.py  applewiki.py  chatgpt.py  embed.py  ipinfo.py  logger.py  moderation.py  ping.py  pomelo.py  pronoundb.py  roles.py  rules.py  say.py  sync.py  twitter.py
